compiler/src/test/resources/amyc/typer/failing/ArithError3.amy
module ArithError3
  "" * 42
end ArithError3
